fixed :hover not working on mobile devices

--- a/public/stylesheets/_about.scss
+++ b/public/stylesheets/_about.scss
@@ -25,7 +25,7 @@
       height: 75%;
       border: white solid 10px;
       border-radius: 50%;
-      @media (max-height: 400px) {
+      @media screen and (max-height: 400px), screen and (max-width: 510px) {
         display: none;
       }
     }
