--- a/public/stylesheets/_projects.scss
+++ b/public/stylesheets/_projects.scss
@@ -20,7 +20,7 @@
     right: 0;
   }
 
-  .project-slides:hover {
+  .project-slides:hover, .project-slides:active {
     .caption {
       visibility: visible;
       opacity: 1;
